--- a/js-fundamentals/DOM/dom.html
+++ b/js-fundamentals/DOM/dom.html
@@ -2,15 +2,22 @@
     <head>
 
     <title>COCO CLICKER</title>
+    <style>
+        * {
+            user-select: none;
+        }
+    </style>
     </head>
 
     <body>
-        <div style = "text-align: center;">
+        <div style = "text-align: center;"><marquee behavior="alternate" direction="[direction]" scrollamount=100 scrolldelay="0.5">
         <img src = "coco.jpg" id = "image" onClick = "clicked()" style=" 
-        width:  20em;
-        height: 20em;
-        object-fit: cover;">
+        width:  3em;
+        height: 3em;
+        object-fit: cover;" draggable="false" > </marquee>
+
         <p id="demo" style="font-size:3em;"">Number of clicks: 0</p>
+
         <script src = "dom.js"></script>
         </div>
     </body>
